Fixed chart labels and on mobile

--- a/css/scss/styles.scss
+++ b/css/scss/styles.scss
@@ -158,9 +158,6 @@ img {
 .p-0 {
   padding: 0;
 }
-.disable-pointer-events {
-  pointer-events: none;
-}
 // Skip Links
 .skip-link-wrapper {
   .skip-link {
@@ -995,6 +992,9 @@ body {
       text-transform: uppercase;
       margin-bottom: 10px;
     }
+  }
+  .single-chart {
+    pointer-events: none;
   }
   .highcharts-title {
     font-size: $h4-size !important;
